# openMVG_Light

./: .gitignore  BUILD.md  COPYRIGHT.md  Dockerfile  pixi.toml
.github/workflows/: codeql.yml  compile_and_run_test.yml  compile_and_run_test_external_deps.yml  pixi_compile_and_run_test.yml
docs/sphinx/rst/: bibliography.rst
docs/sphinx/rst/openMVG/matching/: matching.rst
src/: CMakeLists.txt
src/cmakeFindModules/: OpenMVGConfig.cmake.in
src/nonFree/sift/: CMakeLists.txt
src/openMVG/exif/: CMakeLists.txt
src/openMVG/features/: CMakeLists.txt
src/openMVG/matching/: CMakeLists.txt  matcher_hnsw.hpp  matcher_type.hpp  matching_test.cpp  regions_matcher.cpp
src/openMVG/matching_image_collection/: CMakeLists.txt  Pair_Builder.hpp
src/openMVG/multiview/: motion_from_essential.hpp  triangulation.cpp  triangulation.hpp  triangulation_method.hpp
src/openMVG/robust_estimation/: CMakeLists.txt
src/openMVG/sfm/: sfm.hpp  sfm_data_triangulation.cpp  sfm_data_triangulation.hpp
src/openMVG/sfm/pipelines/: relative_pose_engine.hpp
src/openMVG/sfm/pipelines/localization/: SfM_Localizer_Single_3DTrackObservation_Database.cpp
src/openMVG/sfm/pipelines/sequential/: sequential_SfM.hpp  sequential_SfM2.hpp
src/openMVG_Samples/: CMakeLists.txt
src/openMVG_Samples/describe_and_match_GUI/: MainWindow.cpp
src/openMVG_Samples/visualize_sfm_data/: CMakeLists.txt  visualize_sfm_data.cpp
src/software/: CMakeLists.txt
src/software/SfM/: CMakeLists.txt  SfM_SequentialPipeline.py.in  main_ComputeFeatures.cpp  main_ComputeMatches.cpp  main_ComputeStructureFromKnownPoses.cpp  main_GeometricFilter.cpp  main_PairGenerator.cpp  main_SfM.cpp  main_SfMInit_ImageListing.cpp  main_benchANN.cpp  tutorial_demo.py.in
src/software/SfM/clustering/domSetLibrary/: domset.cc
src/software/SfM/export/: CMakeLists.txt
src/software/SfM/import/: SfM_StructurePipeline.py.in  main_SfMInit_ImageListingFromKnownPoses.cpp
src/software/VO/: CMakeLists.txt
src/software/VO/AlternativeVO/: CMakeLists.txt
